--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@types/leaflet": "^1.9.20",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/react-datepicker": "^6.2.0",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.14.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.0.4",
     "recharts": "^3.1.2"
   },
   "devDependencies": {
