--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/leaflet": "^1.9.20",
     "@types/mapbox-gl": "^3.4.1",
     "@types/react-datepicker": "^6.2.0",
+    "chart.js": "^4.5.0",
+    "chartjs-node-canvas": "^5.0.0",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.14.0",
     "next": "15.5.0",
+    "puppeteer": "^24.17.0",
     "react": "19.1.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
